fix thread vote count overflow

--- a/ruqqus/assets/style/main_dark.scss
+++ b/ruqqus/assets/style/main_dark.scss
@@ -968,6 +968,7 @@ th {
 #thread .voting {
     min-width: 15px;
     margin-right: 15px;
+    overflow-wrap: normal;
 }
 
 #frontpage .voting, #search .voting, #userpage .voting, #guild .voting {
